--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1207px;
+  min-height: 1402px;
 }
 
 .u-section-1 .u-text-1 {
@@ -14,105 +14,105 @@
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 80px auto 0 87px;
+  margin: 80px auto 0 98px;
   padding: 10px 44px 10px 43px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 562px;
+  margin: -45px auto 0 573px;
   padding: 10px 152px 10px 151px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 323px;
+  margin: -45px auto 0 334px;
   padding: 10px 24px 10px 23px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 87px;
+  margin: 9px auto 0 98px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 323px;
+  margin: -45px auto 0 334px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 562px;
+  margin: -45px auto 0 573px;
   padding: 10px 130px 10px 129px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 87px;
+  margin: 9px auto 0 98px;
   padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-8 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 323px;
+  margin: -45px auto 0 334px;
   padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-9 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 563px;
+  margin: -45px auto 0 574px;
   padding: 10px 201px;
 }
 
 .u-section-1 .u-btn-10 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 323px;
+  margin: 9px auto 0 334px;
   padding: 10px 20px;
 }
 
 .u-section-1 .u-btn-11 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 87px;
+  margin: -45px auto 0 98px;
   padding: 10px 36px 10px 35px;
 }
 
 .u-section-1 .u-btn-12 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 563px;
+  margin: -45px auto 0 574px;
   padding: 10px 94px 10px 93px;
 }
 
 .u-section-1 .u-btn-13 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 87px;
+  margin: 9px auto 0 99px;
   padding: 10px 50px 10px 49px;
 }
 
 .u-section-1 .u-btn-14 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 323px;
+  margin: -45px auto 0 335px;
   padding: 10px 50px;
 }
 
 .u-section-1 .u-btn-15 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px 350px 0 auto;
+  margin: -45px auto 0 573px;
   padding: 10px 10px 10px 9px;
 }
 
@@ -120,14 +120,14 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: -45px 111px 0 auto;
+  margin: -45px auto 0 810px;
   padding: 11px 27px 12px;
 }
 
 .u-section-1 .u-btn-17 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 85px;
+  margin: 9px auto 0 98px;
   padding: 10px 127px;
 }
 
@@ -135,7 +135,7 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: -45px 111px 0 auto;
+  margin: -45px auto 0 811px;
   padding: 11px 18px 12px 17px;
 }
 
@@ -143,19 +143,19 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: -45px 350px 0 auto;
+  margin: -45px auto 0 575px;
   padding: 11px 18px 12px 17px;
 }
 
 .u-section-1 .u-btn-20 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 85px;
+  margin: 9px auto 0 97px;
   padding: 10px 77px;
 }
 
 .u-section-1 .u-text-2 {
-  margin: -37px 108px 0 562px;
+  margin: -37px 97px 0 574px;
 }
 
 .u-section-1 .u-text-3 {
@@ -164,8 +164,8 @@
 }
 
 .u-section-1 .u-video-1 {
-  width: 640px;
-  height: 360px;
+  width: 800px;
+  height: 450px;
   margin: 10px auto 60px;
 }
 
@@ -175,7 +175,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 995px;
+    min-height: 1156px;
   }
 
   .u-section-1 .u-text-1 {
@@ -250,14 +250,12 @@
   }
 
   .u-section-1 .u-btn-15 {
-    margin-right: auto;
     margin-left: 476px;
     padding-right: 13px;
     padding-left: 12px;
   }
 
   .u-section-1 .u-btn-16 {
-    margin-right: auto;
     margin-left: 721px;
     padding-left: 29px;
     padding-right: 29px;
@@ -270,14 +268,12 @@
   }
 
   .u-section-1 .u-btn-18 {
-    margin-right: auto;
     margin-left: 721px;
     padding-right: 20px;
     padding-left: 19px;
   }
 
   .u-section-1 .u-btn-19 {
-    margin-right: auto;
     margin-left: 476px;
     padding-left: 21px;
     padding-right: 21px;
@@ -299,7 +295,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 762px;
+    min-height: 840px;
   }
 
   .u-section-1 .u-text-1 {
@@ -406,6 +402,11 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .u-section-1 .u-video-1 {
+    width: 720px;
+    height: 405px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -491,7 +492,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 403px;
+    min-height: 626px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -590,14 +591,14 @@
 
   .u-section-1 .u-btn-15 {
     margin-top: 235px;
-    margin-left: auto;
+    margin-left: 0;
     padding-left: 55px;
     padding-right: 55px;
   }
 
   .u-section-1 .u-btn-16 {
     margin-top: 123px;
-    margin-left: auto;
+    margin-left: 10px;
     padding-right: 77px;
     padding-left: 76px;
   }
@@ -610,14 +611,14 @@
 
   .u-section-1 .u-btn-18 {
     margin-top: 179px;
-    margin-left: auto;
+    margin-left: 11px;
     padding-right: 63px;
     padding-left: 62px;
   }
 
   .u-section-1 .u-btn-19 {
     margin-top: -101px;
-    margin-left: auto;
+    margin-left: 0;
     padding-right: 65px;
     padding-left: 63px;
   }
